force-app/main/default/objects/Gift_Transaction_Line__c/Gift_Transaction_Line__c.object-meta.xml
<CustomObject>
    <label>Gift Transaction Line</label>
    <nameField>
        <displayFormat>GTL-{000000}</displayFormat>
        <label>Gift Transaction Line Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Gift Transaction Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>