force-app/main/default/objects/Gift_Transaction_Line__c/fields/Gift_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Gift_Transaction__c</fullName>
    <label>Gift Transaction</label>
    <referenceTo>GiftTransaction</referenceTo>
    <relationshipLabel>Gift Transaction Lines</relationshipLabel>
    <relationshipName>Gift_Transaction_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>