force-app/main/default/objects/Gift_Transaction_Line__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Gift Transaction Lines</relationshipLabel>
    <relationshipName>Gift_Transaction_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>