force-app/main/default/objects/Gift_Transaction_Line__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Gift_Transaction__c</columns>
    <columns>Product__c</columns>
    <columns>Unit_Price__c</columns>
    <columns>Quantity__c</columns>
    <columns>Total__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>